// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[parseNumberSkeleton] case: "% .##" 1`] = `
{
  "maximumFractionDigits": 2,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "%x100" 1`] = `
{
  "scale": 100,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "()!" 1`] = `
{
  "currencySign": "accounting",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "()" 1`] = `
{
  "currencySign": "accounting",
}
`;

exports[`[parseNumberSkeleton] case: "()?" 1`] = `
{
  "currencySign": "accounting",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "+!" 1`] = `
{
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "+?" 1`] = `
{
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "+_" 1`] = `
{
  "signDisplay": "never",
}
`;

exports[`[parseNumberSkeleton] case: "." 1`] = `
{
  "maximumFractionDigits": 0,
}
`;

exports[`[parseNumberSkeleton] case: ".##" 1`] = `
{
  "maximumFractionDigits": 2,
}
`;

exports[`[parseNumberSkeleton] case: ".##/@##r" 1`] = `
{
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumSignificantDigits": 1,
  "roundingPriority": "morePrecision",
}
`;

exports[`[parseNumberSkeleton] case: ".##/@##s" 1`] = `
{
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumSignificantDigits": 1,
  "roundingPriority": "lessPrecision",
}
`;

exports[`[parseNumberSkeleton] case: ".##/w" 1`] = `
{
  "maximumFractionDigits": 2,
  "trailingZeroDisplay": "stripIfInteger",
}
`;

exports[`[parseNumberSkeleton] case: ".00/w currency/CAD" 1`] = `
{
  "currency": "CAD",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "style": "currency",
  "trailingZeroDisplay": "stripIfInteger",
}
`;

exports[`[parseNumberSkeleton] case: "000" 1`] = `
{
  "minimumIntegerDigits": 3,
}
`;

exports[`[parseNumberSkeleton] case: "E+!00" 1`] = `
{
  "minimumIntegerDigits": 2,
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "E0" 1`] = `
{
  "minimumIntegerDigits": 1,
  "notation": "scientific",
}
`;

exports[`[parseNumberSkeleton] case: "EE+?000" 1`] = `
{
  "minimumIntegerDigits": 3,
  "notation": "engineering",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "compact-long" 1`] = `
{
  "compactDisplay": "long",
  "notation": "compact",
}
`;

exports[`[parseNumberSkeleton] case: "compact-short" 1`] = `
{
  "compactDisplay": "short",
  "notation": "compact",
}
`;

exports[`[parseNumberSkeleton] case: "currency/CAD ." 1`] = `
{
  "currency": "CAD",
  "maximumFractionDigits": 0,
  "style": "currency",
}
`;

exports[`[parseNumberSkeleton] case: "currency/GBP .0*/@@@" 1`] = `
{
  "currency": "GBP",
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 1,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[parseNumberSkeleton] case: "currency/GBP .00##/@@@ unit-width-full-name" 1`] = `
{
  "currency": "GBP",
  "currencyDisplay": "name",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
  "unitDisplay": "long",
}
`;

exports[`[parseNumberSkeleton] case: "currency/GBP .00##/@@@" 1`] = `
{
  "currency": "GBP",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[parseNumberSkeleton] case: "engineering" 1`] = `
{
  "notation": "engineering",
}
`;

exports[`[parseNumberSkeleton] case: "engineering/sign-except-zero" 1`] = `
{
  "notation": "engineering",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "integer-width/*000" 1`] = `
{
  "minimumIntegerDigits": 3,
}
`;

exports[`[parseNumberSkeleton] case: "measure-unit/length-meter .00##/@@@ unit-width-full-name" 1`] = `
{
  "currencyDisplay": "name",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "unit",
  "unit": "meter",
  "unitDisplay": "long",
}
`;

exports[`[parseNumberSkeleton] case: "measure-unit/length-meter .00##/@@@" 1`] = `
{
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "unit",
  "unit": "meter",
}
`;

exports[`[parseNumberSkeleton] case: "notation-simple" 1`] = `
{
  "notation": "standard",
}
`;

exports[`[parseNumberSkeleton] case: "percent .##" 1`] = `
{
  "maximumFractionDigits": 2,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .0###" 1`] = `
{
  "maximumFractionDigits": 4,
  "minimumFractionDigits": 1,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .00/@##" 1`] = `
{
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 1,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .00/@@@" 1`] = `
{
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .00/@@@@*" 1`] = `
{
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent .000*" 1`] = `
{
  "minimumFractionDigits": 3,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "percent scale/0.01" 1`] = `
{
  "scale": 0.01,
  "style": "percent",
}
`;

exports[`[parseNumberSkeleton] case: "scientific" 1`] = `
{
  "notation": "scientific",
}
`;

exports[`[parseNumberSkeleton] case: "scientific/+ee/sign-always" 1`] = `
{
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "scientific/sign-always" 1`] = `
{
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "sign-accounting" 1`] = `
{
  "currencySign": "accounting",
}
`;

exports[`[parseNumberSkeleton] case: "sign-accounting-always" 1`] = `
{
  "currencySign": "accounting",
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "sign-accounting-except-zero" 1`] = `
{
  "currencySign": "accounting",
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "sign-always" 1`] = `
{
  "signDisplay": "always",
}
`;

exports[`[parseNumberSkeleton] case: "sign-auto" 1`] = `
{
  "signDisplay": "auto",
}
`;

exports[`[parseNumberSkeleton] case: "sign-except-zero" 1`] = `
{
  "signDisplay": "exceptZero",
}
`;

exports[`[parseNumberSkeleton] case: "sign-never" 1`] = `
{
  "signDisplay": "never",
}
`;

exports[`case: "" 1`] = `{}`;

exports[`case: "EEE, MMM d, ''yy" 1`] = `
{
  "day": "numeric",
  "month": "short",
  "weekday": "short",
  "year": "2-digit",
}
`;

exports[`case: "h:mm a" 1`] = `
{
  "hour": "numeric",
  "hour12": true,
  "hourCycle": "h12",
  "minute": "2-digit",
}
`;

exports[`case: "yyyy.MM.dd G 'at' HH:mm:ss zzzz" 1`] = `
{
  "day": "2-digit",
  "era": "short",
  "hour": "2-digit",
  "hourCycle": "h23",
  "minute": "2-digit",
  "month": "2-digit",
  "second": "2-digit",
  "timeZoneName": "long",
  "year": "numeric",
}
`;
